# Fulgurant

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  deny.toml  docker-compose.yml  docker-entrypoint.sh  package-lock.json  package.json  reset_db.sh  tailwind_compiler.sh
.github/workflows/: ci.yml  release.yml  safety.yml  security.yml
assets/css/: input.css  layout.css  output.css
assets/js/: admin.js  burger.js  clipboard.js  csrf.js  dashboard.js  nav.js
data/migrations/: 20251112083413_create_initial_tables.sql  20251214000001_create_shares_table.sql  20260125142602_move_encryption_key_to_devices.sql  20260128143700_migrate_dates_to_unix_timestamps.sql  20260205120000_add_force_password_update.sql  20260206120000_add_share_deduplication.sql  20260215000000_add_device_key_fast_hash.sql  20260216120000_optimize_updated_at_triggers.sql  20260218000000_add_destination_device_index.sql  20260227110000_add_hot_path_indexes.sql  20260417000000_add_server_settings.sql  20260520000000_add_sessions_table.sql  20260526120000_rename_encryption_key_to_public_key.sql  20260617000000_add_share_status.sql  20260622000000_drop_share_file_size_check.sql
data/migrations_postgres/: 001_initial.sql  002_add_server_settings.sql  003_add_sessions_table.sql  004_rename_encryption_key_to_public_key.sql  005_add_share_status.sql  006_drop_share_file_size_check.sql
src/: access_token.rs  api_key.rs  csp.rs  database_backup.rs  db.rs  devices.rs  errors.rs  handlers.rs  lib.rs  logging.rs  mail.rs  main.rs  session.rs  settings.rs  shares.rs  templates.rs  users.rs  utils.rs  verification_code.rs
src/admin/: handlers.rs  middleware.rs
src/api/: handlers.rs  middleware.rs  rate_limit.rs  sse.rs
src/auth/: handlers.rs  middleware.rs
src/setup/: handlers.rs  middleware.rs
templates/: 404.html  admin.html  error.html  force_password_update.html  forgot_password.html  index.html  layout.html  login.html  logout.html  register.html  settings.html  setup.html
templates/partials/: error_message.html  setup_form.html
templates/partials/admin/: empty_state.html  max_file_size_success.html  pagination.html  role_change_success.html  user_creation_response.html  user_delete_success.html  user_list.html  user_row.html
templates/partials/auth/: force_password_update_form.html  forgot_password_step_1.html  forgot_password_step_2.html  forgot_password_step_3.html  forgot_password_success.html  registration_step_1.html  registration_step_2.html  registration_step_3.html
templates/partials/devices/: device_creation_response.html  device_edit_form.html  device_list.html  device_row.html  device_row_edit_response.html  device_row_renew_response.html  empty_state.html  empty_state_row.html  inline_edit_form.html  inline_renew_form.html
templates/partials/settings/: email_change_step_2.html  email_change_success.html  sign_out_everywhere_success.html  update_name_success.html
templates/partials/shares/: empty_state.html  share_row.html
test_tools/: seed_users.rs
tests/: admin_tests.rs  api_tests.rs  auth_tests.rs  protected_tests.rs  setup_tests.rs
tests/common/: api_helpers.rs  auth_helpers.rs  mod.rs  test_app.rs
