[package]
name = "Fulgurant"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["rust", "web", "api", "server", "fulgur", "sync"]
categories = ["web", "api", "server"]
homepage = "https://fulgur.app"
default-run = "Fulgurant"

[[bin]] # cargo run --bin seed_users
name = "seed_users"
path = "test_tools/seed_users.rs"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tokio = { version = "1.49.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tower_governor = "0.8.0"
tower-sessions = "0.14.0"
axum-tower-sessions-csrf = "0.1.1"

# TLS/Crypto
rustls = { version = "0.23.36", features = ["aws-lc-rs"], default-features = false }

# Types
fulgur-common = { git = "https://github.com/fulgur-app/Fulgur-common.git" }

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "time"] }

# Templating
askama = "0.15.1"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2"

# SSE
tagged-channels = "0.1.0"
async-stream = "0.3"
futures = "0.3"

# Utilities
uuid = { version = "1.19.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"

rand = "0.9.2"
rand_core = "0.9.3"
base64 = "0.22.1"
argon2 = "0.5.3"
totp-rs = { version = "5.7.0", features = ["qr", "otpauth", "gen_secret"] }
lettre = "0.11.19"
regex = "1.12.2"
jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
sha2 = "0.10.9"
lazy_static = "1.5.0"
time = { version = "0.3.45", features = ["serde", "formatting", "macros"] }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6.1"

[dev-dependencies]
http-body-util = "0.1.3"
