[package]
name = "Fulgurant"
version = "0.3.1"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["rust", "web", "api", "server", "fulgur", "sync"]
categories = ["web", "api", "server"]
homepage = "https://fulgur.app"
default-run = "Fulgurant"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls-no-provider"] }
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tower_governor = "0.8.0"
tower-sessions = "0.14.0"
axum-tower-sessions-csrf = "0.1.1"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

# TLS/Crypto
rustls = { version = "0.23.36", features = ["aws-lc-rs"], default-features = false }
argon2 = "0.5.3"
sha2 = "0.10.9"

# Types
fulgur-common = { git = "https://github.com/fulgur-app/Fulgur-common.git", tag = "v0.3.0" }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "migrate", "time", "macros"] }

# Templating
askama = "0.15.1"
askama_axum = "0.4"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.101"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# SSE
tagged-channels = "0.1.0"
async-stream = "0.3.6"
futures = "0.3.32"

# Utilities
uuid = { version = "1.21.0", features = ["v4", "serde"] }
dotenvy = "0.15.7"
rand = "0.9.2"
rand_core = "0.9.3"
base64 = "0.22.1"
lettre = "0.11.19"
regex = "1.12.3"
lazy_static = "1.5.0"
time = { version = "0.3.47", features = ["serde", "formatting", "macros"] }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.6.1"

[dev-dependencies]
http-body-util = "0.1.3"
