[package]
name = "Fulgurant"
version = "0.6.0"
description = "The Fulgur synchronization server"
authors = ["Fulgur Team <contact@fulgur.app>"]
repository = "https://github.com/fulgur-app/Fulgurant"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
keywords = ["rust", "web", "api", "server", "fulgur", "sync"]
categories = ["web", "api", "server"]
homepage = "https://fulgur.app"
default-run = "Fulgurant"

[lib]
name = "fulgurant"
path = "src/lib.rs"

[dependencies]
# Web framework
axum = { version = "0.8.9", features = ["macros"] }
tokio = { version = "1.52.2", features = ["full"] }
tokio-util = "0.7.18"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["fs", "trace", "set-header"] }
tower_governor = "0.8.0"
tower-sessions = "0.15.0"
axum-tower-sessions-csrf = "0.1.3"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

# Crypto
argon2 = "0.5.3"
sha2 = "0.11.0"
hex = "0.4.3"

# Types
fulgur-common = { git = "https://github.com/fulgur-app/Fulgur-common.git", tag = "v0.4.0" }

# Database
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "migrate", "time", "macros"] }

# Templating
askama = "0.16.0"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Error handling
anyhow = "1.0.102"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"

# SSE
tagged-channels = "0.1.0"
async-stream = "0.3.6"
futures = "0.3.32"

# Utilities
uuid = { version = "1.23.1", features = ["v4", "serde"] }
dotenvy = "0.15.7"
rand = "0.10.1"
rand_core = "0.10.1"
base64 = "0.22.1"
lettre = "0.11.21"
regex = "1.12.3"
time = { version = "0.3.47", features = ["serde", "formatting", "macros"] }

# [target.'cfg(not(target_env = "msvc"))'.dependencies]
# tikv-jemallocator = "0.6.1"

[dev-dependencies]
http-body-util = "0.1.3"
axum-test = "20.0.0"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
duration_suboptimal_units = "allow"
ignored_unit_patterns = "allow"
map_unwrap_or = "allow"
match_wildcard_for_single_variants = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
needless_raw_string_hashes = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
unreadable_literal = "allow"
unused_async = "allow"
